# ros2_canopen

canopen_402_driver_py/: driver.py
canopen_402_driver_ros2/: README.md  package.xml  setup.cfg  setup.py
canopen_402_driver_ros2/canopen_402_driver_ros2/: cia402_ros_node.py
canopen_402_driver_ros2/launch/: cia402_node.launch.py
canopen_402_driver_ros2/resource/: default_cia402_device.eds
